# openapi-agent

./: README.md  pyproject.toml
docs/: design.md
examples/basic/: demo.py
examples/spotify/: auth.py  complex_queries.md  run.py
openapi_agent/: __init__.py  _version.py  agent.py  agent_v1.py  agent_v2.py  openapi_spec.py
tests/: test_assistant_api.py  test_openapi_agent.py  test_spotify_agent.py
